--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,16 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install project
         run: make install
-      - name: Run linter
-        run: make lint
+      - name: Run flake8
+        run: flake8
+      - name: Run pylint
+        run: pylint cmpricehelper
+      - name: Run black on cmpricehelper
+        run: black --check cmpricehelper
+      - name: Run black on tests
+        run: black --check tests
+      - name: Run mypy
+        run: mypy cmpricehelper
 
   tests_linux:
     needs: linter
